--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,3 +21,5 @@ title: Welcome to Middleman
   "https://middlemanapp.com/basics/templating_language/",
   target: "_blank"
 ) %>
+
+<%= link_to 'About', "about/index.html" %>
